EXTRA_DIST = cluster-client.vol cluster-server1.vol cluster-server2.vol cluster-server3.vol standalone-client.vol standalone-server.vol
voldir = $(sysconfdir)/glusterfs/examples
vol_DATA = cluster-client.vol cluster-server1.vol cluster-server2.vol cluster-server3.vol standalone-client.vol standalone-server.vol
