EXTRA = README unify.vol replicate.vol stripe.vol protocol-client.vol protocol-server.vol posix-locks.vol trash.vol write-behind.vol io-threads.vol io-cache.vol read-ahead.vol filter.vol trace.vol
EXTRA_DIST = $(EXTRA)

docdir = $(datadir)/doc/$(PACKAGE_NAME)
Examplesdir = $(docdir)/examples
Examples_DATA = $(EXTRA)

CLEANFILES = 
