syncdaemondir = $(libexecdir)/glusterfs/python/syncdaemon

syncdaemon_PYTHON = gconf.py gsyncd.py __init__.py master.py README.md repce.py \
	resource.py configinterface.py syncdutils.py monitor.py libcxattr.py \
	$(top_builddir)/contrib/ipaddr-py/ipaddr.py libgfchangelog.py changelogagent.py \
	gsyncdstatus.py conf.py

CLEANFILES =
