syncdaemondir = $(GLUSTERFS_LIBEXECDIR)/python/syncdaemon

syncdaemon_PYTHON = rconf.py gsyncd.py __init__.py master.py README.md repce.py \
	resource.py syncdutils.py monitor.py libcxattr.py gsyncdconfig.py \
	libgfchangelog.py gsyncdstatus.py conf.py logutils.py \
	subcmds.py argsupgrade.py py2py3.py

CLEANFILES =
